[package]
name = "alice-terraform"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Moroya Sakamoto"]
description = "Infrastructure as Code engine with resource graph, state management, diff/plan, apply/destroy, provider abstraction, and variable interpolation"

[lib]
crate-type = ["rlib"]
